# igloo

./: README.md  pyproject.toml  run_igloo.py  train.py
evals/: eval_clusters.py
finetune_igbert/: __init__.py  embedding_model.py  eval_masking.py  inference.py  sample_cdrs.py  train.py  train_igbert.py
model/: align_loops.py  dataset.py  metrics.py  multihead_attention.py  transformer_stack.py  vqvae.py  vqvae_length_dependent.py
